    chips, for use with the wl1251, wl12xx and wl18xx drivers
    (Closes: #628676)
  * linux-nonfree: Update wildcards and date for files under the AMD
    licences
  * linux-nonfree: Update wildcard and date for files under the Chelsio
    licence
  * Suppress lintian warnings and errors due to our unusual mixture of
    licences

 -- Ben Hutchings <ben@decadent.org.uk>  Sat, 22 Feb 2014 20:17:55 +0000

firmware-nonfree (0.40) unstable; urgency=low

  * Update to linux-support-3.10-2
  * linux-nonfree: Add Radeon SMC microcode (Closes: #717848)
  * linux-nonfree: Correct descriptions of Radeon chips using some
    microcode files
  * linux-nonfree: Add Radeon HD 7790/8770/8950 and 8100/8200/8300/8400
    series microcode

 -- Ben Hutchings <ben@decadent.org.uk>  Fri, 09 Aug 2013 00:28:02 +0200

firmware-nonfree (0.39) unstable; urgency=low

  * Update to linux-support-3.10-1
  * linux-nonfree: Add Broadcom BCM57766 firmware for use with tg3 driver
  * libertas: Add MWL8764 AP-mode firmware version 7.4.0.9 and PCIE8897
    firmware version 15.69.201.p52
  * iwlwifi: Remove list of model names from description
  * iwlwifi: Add Intel Wireless 3160 and 7260 firmware version 22.0.7.0
    (ABI 7) (Closes: #714754, #717005)
  * bnx2x: Add Broadcom NetXtreme II 10Gb firmware version 7.8.17.0 (for
    Linux 3.10 onward)
  * linux-nonfree: Add Radeon UVD microcode and update RLC microcode
    to support it (Closes: #704564)
  * linux-nonfree: Add Radeon HD 8500/8600 series and R5 M200 microcode
    (Closes: #717145)
  * realtek: Add RTL8723AE firmware for use with rtl8723ae driver
    (Closes: #708346)
  * realtek: Add RTL8188EE firmware for use with rtl8188ee driver
  * realtek: Add RTL8411-2 firmware version 0.0.1 for use with r8169 driver
  * atheros: Add AR3012 rev 41020000 firmware for use with ath3k driver
  * atheros: Add AR5523 firmware for use with ar5523 driver
    (Closes: #700826)
  * iwlwifi: Add Intel Wireless 7260 Bluetooth firmware patches for use