@@ -1,6 +1,7 @@
 Package: firmware-linux
 Architecture: all
-Depends: firmware-linux-free, firmware-linux-nonfree (= ${binary:Version})
+Depends: firmware-linux-free, firmware-linux-nonfree (= ${binary:Version}),
+ ${misc:Depends}
 Recommends: intel-microcode, amd64-microcode
 Description: Binary firmware for various drivers in the Linux kernel (meta-package)
  This package depends on both free and non-free firmware which may
